# crayon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
data/: crayon.yaml
dependencies/: CMakeLists.txt
src/: game.cpp  game.h  game_context.h  game_enums.cpp  game_enums.h  log.h  main.cpp
src/audio/: audio_device.h
src/core/: string.cpp  string.h
src/engine/: README.md  console.cpp  console.h  engine.cpp  engine.h  resource_loader.cpp  resource_loader.h
src/engine/audio/: audio_device.cpp  audio_device.h
src/engine/precompiled/: raygui.cpp
src/game/: README.md  context.h  engine_interface.h  game.cpp  game.h  game_args.cpp  game_args.h  game_config.cpp  game_config.h  game_context.h  game_enums.h  game_options.cpp  game_options.h  game_structs.h  log.cpp  log.h
src/game/components/: audio_effect.h  frame_info.h
src/game/core/: asset_path.cpp  asset_path.h  bounded_value.h  enum_utils.h  string.cpp  string.h
src/game/network/: client_config.h  connection.cpp  connection.h  login_events.cpp  login_events.h  network_packet_builder.cpp  server_command_listener.h  server_command_processor.cpp  server_packets.ksy  server_request.h
src/game/precompiled/: kaitai_struct.cpp
src/network/: client_config.h  keep_alive_processor.cpp  keep_alive_processor.h  network_packet_builder.h  server_command_listener.h  server_command_processor.cpp  server_command_processor.h  server_request.cpp  server_request.h
src/precompiled/: kaitai_struct.h  raygui.cpp
